# clangsql

./: .gitignore  CMakeLists.txt  README.md  todo.md  vcpkg.json
.github/workflows/: build.yml
cmake/: clangsqlConfig.cmake.in
docs/: CLI.md
examples/: README.md
examples/demo/: CMakeLists.txt  handlers.cpp  handlers.h  main.cpp  network.cpp  network.h  types.h  utils.cpp  utils.h
examples/sample_project/: CMakeLists.txt
examples/sample_project/include/sample/: math_utils.hpp  string_utils.hpp
examples/sample_project/src/: main.cpp  math_utils.cpp  string_utils.cpp
prompts/: clangsql_agent.md
scripts/: embed_prompt.py
src/: CMakeLists.txt  tables.cpp
src/cli/: CMakeLists.txt  main.cpp
src/common/: agent_settings.hpp  ai_agent.cpp  ai_agent.hpp  clangsql_agent_prompt.hpp  clangsql_commands.hpp  http_server.cpp  http_server.hpp  mcp_server.cpp  mcp_server.hpp
src/include/clangsql/: ast_cache.hpp  clangsql.hpp  compile_commands.hpp  json.hpp  parser.hpp  project.hpp  session.hpp  tables.hpp
